# chessgpt

./: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
chessgpt/: admin.py  api.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
chessgpt/migrations/: 0001_initial.py  0002_game_modified_game_round.py  0002_remove_game_timecontrol_alter_game_owner.py  0003_alter_chathistory_options.py  0003_alter_game_date.py  0004_chathistory_fname_alter_chathistory_role.py  0004_remove_chathistory_fname_alter_chathistory_role.py  0005_move_turn_alter_move_ply.py  0006_remove_move_turn_move_outcome_alter_move_ply.py
game/: main.py
game/classes/: ApiEventTargetMixin.py  Board.py  ChatGptApi.py  EventSource.py  Game.py  Piece.py  Player.py  RotatingSprite.py  ThreadLogFilter.py  TitleView.py
